--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ body {
     gap: 15px;
     padding: 10px 18px 10px 18px;
 }
-
+.library{
+    max-height: 75vh;
+    overflow-y: scroll;
+}
 .library ul {
     display: flex;
     width: 100px;
@@ -53,7 +56,7 @@ body {
 
 .cont{
     max-height: 200px;
-    overflow: scroll;
+    overflow-y: scroll;
     scroll-behavior: smooth;
 }
 
@@ -132,8 +135,8 @@ span {
 
 .spotify-playlists {
     padding: 10px;
-    max-height: 85vh;
-    overflow: scroll;
+    max-height: 82vh;
+    overflow-y: scroll;
 }
 
 .cardcontainer {
@@ -169,4 +172,12 @@ span {
     position: absolute;
     top: 135px;
     right: 20px;
+}
+.playbar{
+    display: flex;
+    justify-content: center;
+    width: 70vw;
+    background-color: rgb(120, 126, 120);
+    padding: 12px;
+    color: white;
 }
