--- a/utility.css
+++ b/utility.css
@@ -40,3 +40,20 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+.library::-webkit-scrollbar{
+    width: 5px;
+}
+.cont::-webkit-scrollbar{
+    width: 1px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #333;
+    border-radius: 6px;
+}
+::-webkit-scrollbar-track{
+    background-color: #222;
+}
