--- a/style.css
+++ b/style.css
@@ -246,4 +246,7 @@ span {
         padding-left: 20px;
         padding-right: 20px;
     }
+    .cardcontainer {
+        justify-content: center;
+    }
 }
