--- a/style.css
+++ b/style.css
@@ -269,9 +269,9 @@ span {
         padding-left: 20px;
         padding-right: 20px;
     }
-    .playbar{
+    /* .playbar{
         margin-bottom: 50px;
-    }
+    } */
     .signupbtn {
         padding-left: 20px;
         padding-right: 20px;
